--- a/css/main.css
+++ b/css/main.css
@@ -188,14 +188,14 @@ input.textfieldRequiredState, .textfieldRequiredState input, input.textfieldInva
 *******************************************/
 
 div#header-container {
-	background: url(../img/header-bg.png) no-repeat center 0;
+	background: #000000 url(../img/header-bg-new.jpg) no-repeat center 0;
 	min-width: 1024px;
 	position: relative;
 	z-index: 10;
 }
 header {
 	width: 1024px;
-	height: 160px;
+	height: 300px;
 	margin: auto;
 	position: relative;
 	overflow: hidden;
@@ -214,9 +214,10 @@ header a#logo {
 
 *******************************************/
 
+/*
 #main-nav {
 	width: 510px;
-	margin: auto;
+	margin: 182px auto 0;
 	position: relative;
 }
 #main-nav li { float: left; margin-left: 100px;}
@@ -259,6 +260,29 @@ header a#logo {
 	background-position: -412px 8px;
 }
 #main-nav #nav-4 a:hover, #main-nav #nav-4.current a { background: url(../img/main-nav.png) no-repeat -412px -42px;}
+*/
+#main-nav {
+	width: 860px;
+	margin: 182px auto 0;
+}
+#main-nav li {
+	float: left;
+	margin-left: 187px;
+}
+#main-nav li:first-child {
+	margin-left: 0;
+}
+#main-nav li a {
+	/* color: #baa583; */
+	color: #ffffff;
+	font-size: 24px;
+	padding: 15px 0;
+	display: block;
+}
+#main-nav li a:hover,
+#main-nav li.current a {
+	color: #43b8ce;
+}
 
 /*******************************************
 
@@ -294,7 +318,7 @@ div#content {
 ul.image-carousel {
 	width: 761px;
 	height: 466px;
-	margin: -65px auto 50px;
+	margin: -7px auto 50px;
 	position: relative;
 }
 ul.image-carousel li {
@@ -412,14 +436,14 @@ ul.image-carousel li.last-active{
 	padding: 150px 25px 1px;
 	font-size: 18px;
 	/* Gradient Background - cross browser compliant */
-	background: #BAA583; /* Old browsers */
-	background: -moz-linear-gradient(top, #824F3E 0%, #D0C2AA 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#824F3E), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#824F3E', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* W3C */
+	background: #43b8ce; /* Old browsers */
+	background: -moz-linear-gradient(top, #43b8ce 0%, #D0C2AA 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#43b8ce), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #43b8ce 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #43b8ce 0%,#D0C2AA 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #43b8ce 0%,#D0C2AA 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#43b8ce', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #43b8ce 0%,#D0C2AA 100%); /* W3C */
 	box-shadow: 0 5px 12px #333333;
 	-moz-box-shadow: 0 5px 12px #333333;
 	-webkit-box-shadow: 0 5px 12px #333333;
@@ -502,7 +526,7 @@ a.btn-back {
 	height: 15px;
 	text-indent: -9999px;
 	float: left;
-	margin: -70px 0 0 30px;
+	margin: -20px 0 0 30px;
 	padding: 5px 5px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
